Role and Authority changes